# parallel-pagerank

./: .gitignore  CMakeLists.txt  README.md  plot_measurements.py
src/: COOMatrix.cpp  Graph.cpp  Measurement.cpp  PageRankSolver.cpp  PageRankSolverMPI.cpp  main.cpp  matrix_builder.cpp  matrix_builder.hpp  pagerank_solver.cpp  pagerank_solver.hpp
src/include/: COOMatrix.hpp  Graph.hpp  Measurement.hpp  PageRankSolver.hpp  PageRankSolverMPI.hpp
